Test version done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="Styles/Generel.css">
   <link rel="stylesheet" href="Styles/Header.css">
   <link rel="stylesheet" href="Styles/NavBar.css">
+  <link rel="stylesheet" href="Styles/BuyButton.css">
 
   <title>Hacks are bad kids</title>
 </head>
@@ -26,8 +27,22 @@
         <img src="Imgs/download-removebg-preview (2).png" alt="close sidebar icon" class="close-sidebar-icon">
       </button>
     </div>
+    <p>
+      i will put stuff here later so give me a list of what you want
+    </p>
   </nav>
-  <main></main>
+  <main>
+    <div class="buy-now-button-section-wrapper">
+      <p class="buy-now-button-text">
+        Hacks Are Cringe
+      </p>
+      <button class="buy-now-button">
+        Buy Now
+      </button>
+    </div>
+    <p>i dont like this button but im to lazy to change it rn
+    </p>
+  </main>
   
   <script src="index.js"></script>
 </body>
