Nav bar has a pfp and some options

--- a/index.html
+++ b/index.html
@@ -23,14 +23,35 @@
   </header>
   <nav class="sidebar" id="sidebar">
     <div class="close-button-wrapper">
+      <img src="Imgs/lena-denk-vO_RghTzvxE-unsplash.jpg" alt="pfp" class="pfp">
       <button class="close-sidebar-button" onclick="sidebarCloseButtonClicked()">
         <img src="Imgs/download-removebg-preview (2).png" alt="close sidebar icon" class="close-sidebar-icon">
       </button>
     </div>
-    <p>
-      i will put stuff here later so give me a list of what you want
-    </p>
-  </nav>
+
+    <div class="main-nav-options">
+      <div class="buy-now">
+        <a class="buy-now-text" href="index.html">
+          BuyNow!
+        </a>
+      </div>
+      <div class="support">
+        <a class="support-text" href="SidePages/support.html">
+          Support!
+        </a>
+      </div>
+      <div class="discord">
+        <a class="discord-text" href="SidePages/discord.html">
+          Discord!
+        </a>
+      </div>
+      <div class="updates">
+        <a class="updates-text" href="SidePages/updates.html">
+          Updates!
+        </a>
+      </div>
+    </div>
+</nav>
   <main>
     <div class="buy-now-button-section-wrapper">
       <p class="buy-now-button-text">
@@ -43,7 +64,6 @@
     <p>i dont like this button but im to lazy to change it rn
     </p>
   </main>
-  
   <script src="index.js"></script>
 </body>
 </html>
