Fixed some stuff

--- a/SidePages/discord.html
+++ b/SidePages/discord.html
@@ -25,29 +25,32 @@
   </header>
   <nav class="sidebar" id="sidebar">
     <div class="close-button-wrapper">
+      <img src="/Imgs/lena-denk-vO_RghTzvxE-unsplash.jpg" alt="pfp" class="pfp">
       <button class="close-sidebar-button" onclick="sidebarCloseButtonClicked()">
         <img src="/Imgs/download-removebg-preview (2).png" alt="close sidebar icon" class="close-sidebar-icon">
       </button>
     </div>
-    <div class="buy-now">
-      <a class="buy-now-text" href="/index.html">
-        BuyNow!
-      </a>
-    </div>
-    <div class="support">
-      <a class="support-text" href="support.html">
-        Support!
-      </a>
-    </div>
-    <div class="discord">
-      <a class="discord-text" href="discord.html">
-        Discord!
-      </a>
-    </div>
-    <div class="updates">
-      <a class="updates-text" href="updates.html">
-        Updates!
-      </a>
+    <div class="main-nav-options">
+      <div class="buy-now">
+        <a class="buy-now-text" href="/index.html">
+          BuyNow!
+        </a>
+      </div>
+      <div class="support">
+        <a class="support-text" href="support.html">
+          Support!
+        </a>
+      </div>
+      <div class="discord">
+        <a class="discord-text" href="discord.html">
+          Discord!
+        </a>
+      </div>
+      <div class="updates">
+        <a class="updates-text" href="updates.html">
+          Updates!
+        </a>
+      </div>
     </div>
   </nav>
   <main>
